# ai-finance-advisor

./: .gitignore  README.md  app.py  create_structure.py  pyproject.toml  requirements.txt  secrets.toml
auth/: __init__.py  authentication.py  user_management.py
config/: __init__.py  settings.py
database/: __init__.py  connection.py  migrations.sql  models.py
services/: __init__.py  ai_advisor.py  investment_service.py  notification_service.py  transaction_parser.py
utils/: __init__.py  file_processor.py  helpers.py
