[project]
name = "ai-finance-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.1",
    "alpha-vantage==2.3.1",
    "bcrypt==4.1.2",
    "black==23.12.1",
    "celery==5.3.4",
    "cryptography==45.0.4",
    "email-validator==2.1.0.post1",
    "flake8==7.0.0",
    "forex-python==1.8",
    "httpx==0.26.0",
    "langchain==0.3.25",
    "langchain-core==0.3.68",
    "langchain-openai==0.3.27",
    "loguru==0.7.2",
    "matplotlib==3.8.2",
    "mypy==1.8.0",
    "numpy==1.26.2",
    "openai==1.93.0",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "pdfplumber==0.10.3",
    "phonenumbers==8.13.27",
    "pillow==10.1.0",
    "plotly==5.18.0",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "pypdf2==3.0.1",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.8",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "requests==2.31.0",
    "seaborn==0.13.0",
    "sendgrid==6.11.0",
    "sqlalchemy==2.0.25",
    "streamlit==1.29.0",
    "streamlit-aggrid==0.3.4.post3",
    "streamlit-authenticator==0.2.3",
    "streamlit-option-menu==0.3.6",
    "streamlit-plotly-events==0.0.6",
    "toml==0.10.2",
    "twilio==8.12.0",
    "xlrd==2.0.1",
    "yfinance==0.2.28",
]
